# zed_setup

./: CMakeLists.txt  README.md  apps.txt  cpp.txt  f1test.py  main.cpp  settings.json  tasks.json  useful.txt
